--- a/Lecture-3/card.html
+++ b/Lecture-3/card.html
@@ -27,6 +27,26 @@
           </main>
 
       </section>
+      <section class="card">
+          <main class="complete-description">
+              <div class="image-container">
+                  <img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/CyprusShorthair.jpg" alt="catImage">
+              </div>
+              <div class="description">
+                  <div class="keys">
+                      <article class="animal-name">
+                          <h5>Cat</h5>
+                      </article>
+                  </div>
+                  <div class="values">
+                      <article class="animal-desc">
+                          <p>Cat is an animal</p>
+                      </article>
+                  </div>
+              </div>
+          </main>
+
+      </section>
   </section>
 </body>
 </html>
