--- a/Lecture-11/public/index.html
+++ b/Lecture-11/public/index.html
@@ -4,7 +4,9 @@
     <title></title>
 </head>
 <body>
- <button onclick="makeRequest()">Make Request</button>
+ <input id="inp">
+ <button id="btn">Make Request</button>
+ <ul id="result"></ul>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="app.js"></script>
 </body>
