--- a/Lecture-16/public/index.html
+++ b/Lecture-16/public/index.html
@@ -10,5 +10,11 @@
     <input type="password" name="password">
     <input type="submit">
 </form>
+
+<form method="post" action="/signup">
+    <input type="text" name="username">
+    <input type="password" name="password">
+    <input type="submit">
+</form>
 </body>
 </html>
